Fix #331 java 11 illegal access warnings
quell warnings caused by Retrofit 2.8
https://github.com/square/retrofit/issues/3341